--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "meter-bill-gallery",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "@tailwindcss/postcss": "latest"
   },
   "devDependencies": {
     "autoprefixer": "latest",
